--- a/.github/workflows/create_index.yml
+++ b/.github/workflows/create_index.yml
@@ -45,6 +45,7 @@ jobs:
         run: pip install pyyaml
       - name: Arguments
         run: |
+          echo '🔁 gettings arguments'
           toc_hide=''
           nav_hide=''
           description=''
