--- a/.github/workflows/create_index.yml
+++ b/.github/workflows/create_index.yml
@@ -43,7 +43,7 @@ jobs:
           cache: 'pip'
       - name: Install requirements
         run: pip install pyyaml
-      - name: Arguments
+      - name: Gettings arguments
         id: args
         run: |
           echo '🔁 gettings arguments'
@@ -55,8 +55,6 @@ jobs:
           desc_len=${#desc}
           path="${{ github.events.inputs.path }}"
           path_len=${#path}
-          echo $path_len
-          echo $desc_len
           if [[ ${{inputs.toc_hide}} -eq true ]]
           then
             toc_hide='--toc'
@@ -77,11 +75,11 @@ jobs:
           echo "::set-output name=nav_hide::$nav_hide"
           echo "::set-output name=description::$description"
           echo "::set-output name=parent::$parent"
-      - name: get args
+      - name: dry-run
         run: |
-          echo ${{ steps.args.outputs.toc_hide }}
-          echo ${{ steps.args.outputs.description }}
-          
+          echo "🐍 Creating category [dry-run]"
+          python3 category.py ${{ github.events.inputs.category_name }} --dry-run ${{ steps.args.outputs.toc_hide }} ${{ steps.args.ouputs.nav_hide }} ${{ steps.args.outputs.description }} ${{ steps.args.outputs.parent }}
+      
 
 
 
