--- a/.github/workflows/create_index.yml
+++ b/.github/workflows/create_index.yml
@@ -29,9 +29,10 @@ jobs:
     steps:
       - name: echo variable
         run: |
-          echo "Category name : ${{ github.events.inputs.category_name }}"
-          echo "Parent path : ${{ github.events.inputs.path }}"
-          echo "Description : ${{ github.events.inputs.description }}"
+          echo 📫 Commands arguments
+          echo "Category name : ${{ inputs.category_name }}"
+          echo "Parent path : ${{ inputs.path }}"
+          echo "Description : ${{ inputs.description }}"
           echo "Hide toc : ${{ inputs.toc_hide }}"
           echo "Hide nav : ${{ inputs.nav_hide }}"
       - name: checkout repo
@@ -46,7 +47,7 @@ jobs:
       - name: Gettings arguments
         id: args
         run: |
-          echo '🔁 gettings arguments'
+          echo 🔁 gettings arguments
           toc_hide=''
           nav_hide=''
           description=''
@@ -79,7 +80,7 @@ jobs:
         run: |
           echo "🐍 Creating category [dry-run]"
           python3 category.py ${{ github.events.inputs.category_name }} --dry-run ${{ steps.args.outputs.toc_hide }} ${{ steps.args.ouputs.nav_hide }} ${{ steps.args.outputs.description }} ${{ steps.args.outputs.parent }}
-      
+
 
 
 
