--- a/.github/workflows/create_index.yml
+++ b/.github/workflows/create_index.yml
@@ -66,11 +66,11 @@ jobs:
           fi
           if [[ $desc_len -ge 1 ]]
           then
-            description='--description ${{github.events.inputs.description}}'
+            description='--description "${{github.events.inputs.description}}"'
           fi
           if [[ $path_len -ge 1 ]]
           then
-            parent='--parent ${{github.events.inputs.path}}'
+            parent='--parent "${{github.events.inputs.path}}"'
           fi
           echo "::set-output name=toc_hide::$toc_hide"
           echo "::set-output name=nav_hide::$nav_hide"
@@ -79,7 +79,11 @@ jobs:
       - name: dry-run
         run: |
           echo "🐍 Creating category [dry-run]"
-          python3 category.py ${{ github.events.inputs.category_name }} --dry-run ${{ steps.args.outputs.toc_hide }} ${{ steps.args.ouputs.nav_hide }} ${{ steps.args.outputs.description }} ${{ steps.args.outputs.parent }}
+          python3 category.py "${{ inputs.category_name }}" --dry-run ${{ steps.args.outputs.toc_hide }} ${{ steps.args.ouputs.nav_hide }} ${{ steps.args.outputs.description }} ${{ steps.args.outputs.parent }}
+      - name: Set github accounts
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@users.noreply.github.com'
 
 
 
