--- a/.github/workflows/create_index.yml
+++ b/.github/workflows/create_index.yml
@@ -79,7 +79,7 @@ jobs:
       - name: dry-run
         run: |
           echo "🐍 Creating category [dry-run]"
-          python3 category.py "${{ inputs.category_name }}" --dry-run ${{ steps.args.outputs.toc_hide }} ${{ steps.args.ouputs.nav_hide }} ${{ steps.args.outputs.description }} ${{ steps.args.outputs.parent }}
+          python3 category.py "${{ inputs.category_name }}" --dry-run ${{ steps.args.outputs.toc_hide }} ${{ steps.args.outputs.nav_hide }} ${{ steps.args.outputs.description }} ${{ steps.args.outputs.parent }}
       - name: Set github accounts
         run: |
           git config --global user.name 'github-actions'
