--- a/.github/workflows/create_index.yml
+++ b/.github/workflows/create_index.yml
@@ -67,12 +67,12 @@ jobs:
             dry_run='--dry-run'
             echo "--dry-run"
           fi
-          if [[ "${{inputs.toc_hide}}"" -eq "true" ]]
+          if [[ "${{inputs.toc_hide}}" -eq "true" ]]
           then
             toc_hide='--toc'
             echo "--toc"
           fi
-          if [[ "${{inputs.nav_hide}}"" -eq "true" ]]
+          if [[ "${{inputs.nav_hide}}" -eq "true" ]]
           then
             nav_hide='--nav'
             echo "--nav"
