--- a/.github/workflows/create_index.yml
+++ b/.github/workflows/create_index.yml
@@ -34,12 +34,12 @@ jobs:
       - name: echo variable
         run: |
           echo 📫 Commands arguments
-          echo "Category name : ${{ inputs.category_name }}"
-          echo "Parent path : ${{ inputs.path }}"
-          echo "Description : ${{ inputs.description }}"
-          echo "Hide toc ? ${{ inputs.toc_hide }}"
-          echo "Hide nav ? ${{ inputs.nav_hide }}"
-          echo "Dry run ? ${{ inputs.dry_run }}"
+          echo "Category name : ${{ inputs.category_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "Parent path : ${{ inputs.path }}" >> $GITHUB_STEP_SUMMARY
+          echo "Description : ${{ inputs.description }}" >> $GITHUB_STEP_SUMMARY
+          echo "Hide toc ? ${{ inputs.toc_hide }}" >> $GITHUB_STEP_SUMMARY
+          echo "Hide nav ? ${{ inputs.nav_hide }}" >> $GITHUB_STEP_SUMMARY
+          echo "Dry run ? ${{ inputs.dry_run }}" >> $GITHUB_STEP_SUMMARY
       - name: checkout repo
         uses: actions/checkout@v3
       - name: Python
@@ -52,7 +52,8 @@ jobs:
       - name: Gettings arguments
         id: args
         run: |
-          echo 🔁 gettings arguments
+          echo 🔁 Get python arguments
+          echo "💠Arguments : "
           toc_hide=''
           nav_hide=''
           dry_run=''
@@ -95,7 +96,7 @@ jobs:
       - name: Creating index
         run: |
           echo "🐍 Creating category"
-          python3 category.py "${{ inputs.category_name }}" ${{steps.args.outputs.dry_run}} ${{ steps.args.outputs.toc_hide }} ${{ steps.args.outputs.nav_hide }} ${{ steps.args.outputs.description }} ${{ steps.args.outputs.parent }}
+          python3 category.py "${{ inputs.category_name }}" ${{steps.args.outputs.dry_run}} ${{ steps.args.outputs.toc_hide }} ${{ steps.args.outputs.nav_hide }} ${{ steps.args.outputs.description }} ${{ steps.args.outputs.parent }} >> $GITHUB_STEP_SUMMARY
       - name: Set github accounts
         if: ${{ inputs.dry_run == false }}
         run: |
