--- a/.github/workflows/create_index.yml
+++ b/.github/workflows/create_index.yml
@@ -96,7 +96,9 @@ jobs:
       - name: Creating index
         run: |
           echo "🐍 Creating category"
+          echo "```" >> $GITHUB_STEP_SUMMARY
           python3 category.py "${{ inputs.category_name }}" ${{steps.args.outputs.dry_run}} ${{ steps.args.outputs.toc_hide }} ${{ steps.args.outputs.nav_hide }} ${{ steps.args.outputs.description }} ${{ steps.args.outputs.parent }} >> $GITHUB_STEP_SUMMARY
+          echo "```" >> $GITHUB_STEP_SUMMARY
       - name: Set github accounts
         if: ${{ inputs.dry_run == false }}
         run: |
