--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -4,6 +4,8 @@ group:
       dest: overrides/
     - requirements.txt
     - docs/assets/css/template
+    - .github/workflows/create_index.yml
+    - .github/workflows/publisher_only.yml
     repos: |
       obsidianMkdocs/obsidian-mkdocs-publisher-template
       obsidianMkdocs/obsidian_mkdocs_publisher_docs
