--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -6,6 +6,7 @@ group:
     - docs/assets/css/template
     - .github/workflows/create_index.yml
     - .github/workflows/mkdocs_build.yml
+    - .github/workflows/update_requirements.yml
     repos: |
       obsidianMkdocs/obsidian-mkdocs-publisher-template
       obsidianMkdocs/obsidian_mkdocs_publisher_docs
