--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -1,8 +1,13 @@
 group:
+  - files: 
+    - requirements.txt
+  - repos: |
+      obsidianMkdocs/obsidian-mkdocs-publisher-template
+      sandboxingRepo/obsidian-sandbox
+
   - files:
     - source: overrides/
       dest: overrides/
-    - requirements.txt
     - docs/assets/css/template
     - .github/workflows/create_index.yml
     - .github/workflows/mkdocs_build.yml
