--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,7 +34,6 @@ theme:
         - navigation.top
         - navigation.tabs
         - navigation.tabs.sticky
-        - navigation.instant
         - search.suggest
         - search.highlight
 # Extensions
@@ -83,7 +82,7 @@ markdown_extensions:
           format: !!python/name:mermaid2.fence_mermaid
       preserve_tabs: true
 plugins:
-  - search:
+  - search
   - git-revision-date-localized:
       type: date
       fallback_to_build_date: true
@@ -94,7 +93,11 @@ plugins:
         wikilinks: true
   - mermaid2
   - awesome-pages
-  - tooltipster-links
+  - tooltipster-links:
+      callouts: true
+      custom-attributes: 'assets/css/custom_attributes.css'
+      max-characters: 500
+      truncate-character: '...'
   - embed_file:
       callouts: true
       custom-attributes: 'assets/css/custom_attributes.css'
