--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ mkdocs-encryptcontent-plugin==2.2.1
 mkdocs-simple-hooks==0.1.5
 mkdocs-callouts==1.6.0
 mkdocs-custom-tags-attributes==0.2.1
-git+https://github.com/Mara-Li/mkdocs-meta-descriptions-plugin.git
+mkdocs-meta-descriptions-plugin==2.0.0
