--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -24,3 +24,8 @@ group:
       dest: wiki_hover.js
     repos: |
       ObsidianPublisher/tooltips-internal-link
+  - files:
+    - source: docs/Lagendia/Lagendia — Personnages data.md
+      dest: docs/Personnages/Liste des PJ.md
+    repos: |
+       Lagendia-Roleplay/wiki
