--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -28,7 +28,7 @@ group:
     - source: docs/Lagendia/Lagendia — Personnages data.md
       dest: docs/Personnages/PJ.md
     - source: "docs/Lagendia/Sanktae/index.md"
-      dest: "docs/Espèces/Races intelligentes/Sanktae.md"
+      dest: "docs/Espèces/races/Sanktae.md"
     repos: |
        Lagendia-Roleplay/wiki
        
