--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -1,6 +1,7 @@
 group:
   - files: 
     - requirements.txt
+    - .github/workflows/update_requirements.yml
     repos: |
       ObsidianPublisher/obsidian-mkdocs-publisher-template
       sandboxingRepo/obsidian-sandbox
