--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,10 +102,9 @@ plugins:
       file: 'assets/css/custom_attributes.css'
   - tags:
       tags_file: tags.md
-  - mkdocs-simple-hooks:
-      hooks:
-        on_env: "overrides.hooks.on_env:on_env"
-        on_page_markdown: "overrides.hooks.on_page_markdown:on_page_markdown"
+  - hooks:
+      - overrides/hooks/on_page_markdown.py
+      - overrides/hooks/on_env.py
   - encryptcontent:
       title_prefix: '🔐'
       summary: 'Page privée'
