--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           cache: 'pip'
       - name: Install Python dependencies
         run: pip install -r requirements.txt
-      - run: mkdocs gh-deploy --force --clean
+      - run: mkdocs gh-deploy --force
