--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install -D netlify-plugin-cache && mkdocs build"
+  command = "mkdocs build"
   publish = "site"
 [template]
   incoming-hooks = ["Contentful"]
