--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,24 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v4
+      - id: setup_python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.11'
           cache: 'pip'
-      - name: Install Python dependencies
-        run: pip install -r requirements.txt
-      - run: mkdocs gh-deploy --dirty
+      - id: python_cache
+        uses: actions/cache@v3
+        with:
+          path: venv
+          key: pip-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('requirements.txt') }}
+      - if: steps.python_cache.outputs.cache-hit != 'true'
+        run: |
+          # Check if venv exists (restored from secondary keys if any, and delete)
+          # You might not need this line if you only have one primary key for the venv caching
+          # I kept it in my code as a fail-safe
+          if [ -d "venv" ]; then rm -rf venv; fi
+          # Re-create the venv
+          python3 -m venv venv
+          # Install dependencies
+          venv/bin/python3 -m pip install -r requirements.txt
+      - run: mkdocs gh-deploy
