--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,10 @@ on:
       - 'docs/**'
       - 'mkdocs.yml'
       - 'requirements.txt'
-
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+  
 jobs:
   mkdocs:
     runs-on: ubuntu-latest
@@ -31,14 +34,26 @@ jobs:
           key: pip-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('requirements.txt') }}
       - if: steps.python_cache.outputs.cache-hit != 'true'
         run: |
-          # Check if venv exists (restored from secondary keys if any, and delete)
-          # You might not need this line if you only have one primary key for the venv caching
-          # I kept it in my code as a fail-safe
           if [ -d "venv" ]; then rm -rf venv; fi
-          # Re-create the venv
           python3 -m venv venv
-          # Install dependencies
           venv/bin/python3 -m pip install -r requirements.txt
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v2
       - run: |
           source venv/bin/activate
-          mkdocs gh-deploy
+          mkdocs build
+      - name: Upload SITE ARTIFACT
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./site
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: mkdocs
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
