--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,11 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
   
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+  
 jobs:
   mkdocs:
     runs-on: ubuntu-latest
