--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ permissions:
   id-token: write
   
 jobs:
-  mkdocs:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -65,6 +65,7 @@ jobs:
             .
         env:
           INPUT_PATH: ./site
+          RUNNER_TEMP: ${{ runner.temp }}
       - name: Upload artifact
         uses: actions/upload-artifact@main
         with:
@@ -76,7 +77,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: mkdocs
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
