--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
           chmod -c -R +rX "$INPUT_PATH" | while read line; do
             echo "::warning title=Invalid file permissions automatically fixed::$line"
           done
+          echo "$INPUT_PATH will be ARCHIVED"
           tar \
             --dereference --hard-dereference \
             --directory "$INPUT_PATH" \
@@ -64,7 +65,7 @@ jobs:
             --exclude=.github \
             .
         env:
-          INPUT_PATH: ./site
+          INPUT_PATH: site/
           RUNNER_TEMP: ${{ runner.temp }}
       - name: Upload artifact
         uses: actions/upload-artifact@main
