--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,16 +57,15 @@ jobs:
             echo "::warning title=Invalid file permissions automatically fixed::$line"
           done
           echo "$INPUT_PATH will be ARCHIVED"
-          tree
+          cd $INPUT_PATH
           tar \
             --dereference --hard-dereference \
-            --directory "$INPUT_PATH" \
             -cavf "$RUNNER_TEMP/artifact.tar.bz2"
             --exclude=.git \
             --exclude=.github \
             .
         env:
-          INPUT_PATH: site/
+          INPUT_PATH: site
           RUNNER_TEMP: ${{ runner.temp }}
       - name: Upload artifact
         uses: actions/upload-artifact@main
