--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,12 +56,10 @@ jobs:
           chmod -c -R +rX "$INPUT_PATH" | while read line; do
             echo "::warning title=Invalid file permissions automatically fixed::$line"
           done
-          echo "$INPUT_PATH will be ARCHIVED"
-          ls $INPUT_PATH
-          ls $RUNNER_TEMP
+          echo "$INPUT_PATH will be ARCHIVED in $RUNNER_TEMP"
           tar \
             --dereference --hard-dereference \
-            --directory "$INPUT_PATH"
+            --directory "$INPUT_PATH" \
             -cavf "$RUNNER_TEMP/artifact.tar.bz2"
             --exclude=.git \
             --exclude=.github \
