--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,23 +115,10 @@ plugins:
   - glightbox
   - minify:
       minify_html: true
-      minify_js: true
-      minify_css: true
+      minify_js: false
+      minify_css: false
       htmlmin_opts:
           remove_comments: true
-      js_files:
-          - assets/js/mathjax.js
-          - assets/js/utils.js
-          - assets/js/chirpy.js
-          - assets/js/wiki_hover.js
-      css_files:
-          - assets/css/template/img-grids-floats.css
-          - assets/css/template/utils.css
-          - assets/css/template/blog.css
-          - assets/css/template/grid.css
-          - assets/css/custom_attributes.css
-          - assets/css/admonition.css
-          - assets/css/customization.css
 hooks:
   - overrides/hooks/on_page_markdown.py
   - overrides/hooks/on_env.py
